##
# Copyright 2003, OpenLDAP Foundation, All Rights Reserved.
# COPYING RESTRICTIONS APPLY, see COPYRIGHT file
##
noinst_PROGRAMS = main readSchema urlTest

main_SOURCES = main.cpp
main_LDADD = ../src/libldapcpp.la

readSchema_SOURCES = readSchema.cpp
readSchema_LDADD = ../src/libldapcpp.la

urlTest_SOURCES = urlTest.cpp
urlTest_LDADD = ../src/libldapcpp.la
